// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The supporter-product-data-ts stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "AddSupporterRatePlanItemToQueueLambdaDD682096": {
      "DependsOn": [
        "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "SupporterProductDataLambdaRole4E321A2D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "membership-dist",
          "S3Key": "support/CODE/supporter-product-data-ts/supporter-product-data-ts.zip",
        },
        "Environment": {
          "Variables": {
            "STAGE": "CODE",
          },
        },
        "FunctionName": "supporterProductDataTSAddToQueue-CODE",
        "Handler": "addSupporterRatePlanItemToQueueLambda.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "SupporterProductDataLambdaRole4E321A2D",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 600,
      },
      "Type": "AWS::Lambda::Function",
    },
    "FetchResultsLambda5FC5FE70": {
      "DependsOn": [
        "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "SupporterProductDataLambdaRole4E321A2D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "membership-dist",
          "S3Key": "support/CODE/supporter-product-data-ts/supporter-product-data-ts.zip",
        },
        "Environment": {
          "Variables": {
            "STAGE": "CODE",
          },
        },
        "FunctionName": "supporterProductDataTSFetchResults-CODE",
        "Handler": "fetchResultsLambda.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "SupporterProductDataLambdaRole4E321A2D",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ProcessSupporterRatePlanItemLambdaA5F903FB": {
      "DependsOn": [
        "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "SupporterProductDataLambdaRole4E321A2D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "membership-dist",
          "S3Key": "support/CODE/supporter-product-data-ts/supporter-product-data-ts.zip",
        },
        "Environment": {
          "Variables": {
            "STAGE": "CODE",
          },
        },
        "FunctionName": "supporterProductDataTSProcessItem-CODE",
        "Handler": "processSupporterRatePlanItemLambda.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "SupporterProductDataLambdaRole4E321A2D",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 600,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ProcessSupporterRatePlanItemLambdaSqsEventSourcesupporterproductdatatsCODESupporterProductDataQueue9697A9ED3C82F760": {
      "Properties": {
        "BatchSize": 10,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "SupporterProductDataQueue672ACC7A",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "ProcessSupporterRatePlanItemLambdaA5F903FB",
        },
        "ScalingConfig": {
          "MaximumConcurrency": 30,
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "QueryZuoraLambdaA1DF3AA8": {
      "DependsOn": [
        "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "SupporterProductDataLambdaRole4E321A2D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "membership-dist",
          "S3Key": "support/CODE/supporter-product-data-ts/supporter-product-data-ts.zip",
        },
        "Environment": {
          "Variables": {
            "STAGE": "CODE",
          },
        },
        "FunctionName": "supporterProductDataTSQueryZuora-CODE",
        "Handler": "queryZuoraLambda.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "SupporterProductDataLambdaRole4E321A2D",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "SupporterProductDataLambdaRole4E321A2D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "ssm:GetParametersByPath",
                    "ssm:GetParameter",
                    "ssm:PutParameter",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:ssm:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":parameter/supporter-product-data/CODE/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": [
                    "s3:PutObject",
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": "arn:aws:s3:::supporter-product-data-export-code/*",
                },
                {
                  "Action": [
                    "dynamodb:UpdateItem",
                    "dynamodb:PutItem",
                    "dynamodb:GetItem",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:dynamodb:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":table/SupporterProductData-CODE",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "secretsmanager:GetSecretValue",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:secretsmanager:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":secret:CODE/Zuora-OAuth/SupportServiceLambdas*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "LambdaPermissions",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SupporterProductDataLambdaRoleDefaultPolicy4120CE52": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "SupporterProductDataQueue672ACC7A",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "SupporterProductDataQueue672ACC7A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "Roles": [
          {
            "Ref": "SupporterProductDataLambdaRole4E321A2D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SupporterProductDataQueue672ACC7A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "supporter-product-data-ts-CODE",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VisibilityTimeout": 600,
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "SupporterProductDataSchedule71480586": {
      "Properties": {
        "ScheduleExpression": "cron(0 9 ? * MON-FRI *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Ref": "SupporterProductDataStateMachineEE9D4865",
            },
            "Id": "Target0",
            "Input": "{"queryType":"incremental"}",
            "RoleArn": {
              "Fn::GetAtt": [
                "SupporterProductDataStateMachineEventsRole27F9B1A6",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "SupporterProductDataStateMachineEE9D4865": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "SupporterProductDataStateMachineRoleDefaultPolicyD3E01956",
        "SupporterProductDataStateMachineRoleAA234DCC",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"QueryZuoraTask","States":{"QueryZuoraTask":{"Next":"WaitForZuora","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"",
              {
                "Fn::GetAtt": [
                  "QueryZuoraLambdaA1DF3AA8",
                  "Arn",
                ],
              },
              ""},"WaitForZuora":{"Type":"Wait","Seconds":30,"Next":"FetchResultsTask"},"FetchResultsTask":{"Next":"CheckForNewSubscriptions","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2},{"ErrorEquals":["States.ALL"],"IntervalSeconds":60,"MaxAttempts":20,"BackoffRate":1}],"Type":"Task","Resource":"",
              {
                "Fn::GetAtt": [
                  "FetchResultsLambda5FC5FE70",
                  "Arn",
                ],
              },
              ""},"CheckForNewSubscriptions":{"Type":"Choice","Choices":[{"Variable":"$.recordCount","NumericEquals":0,"Next":"NoNewSubscriptions"}],"Default":"AddToQueueTask"},"AddToQueueTask":{"Next":"MoreToProcess","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"",
              {
                "Fn::GetAtt": [
                  "AddSupporterRatePlanItemToQueueLambdaDD682096",
                  "Arn",
                ],
              },
              ""},"MoreToProcess":{"Type":"Choice","Choices":[{"Variable":"$.processedCount","NumericLessThanPath":"$.recordCount","Next":"AddToQueueAgainTask"}],"Default":"Done"},"AddToQueueAgainTask":{"Next":"MoreToProcess","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"",
              {
                "Fn::GetAtt": [
                  "AddSupporterRatePlanItemToQueueLambdaDD682096",
                  "Arn",
                ],
              },
              ""},"Done":{"Type":"Succeed"},"NoNewSubscriptions":{"Type":"Succeed"}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "SupporterProductDataStateMachineRoleAA234DCC",
            "Arn",
          ],
        },
        "StateMachineName": "supporter-product-data-ts-CODE",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "SupporterProductDataStateMachineEventsRole27F9B1A6": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SupporterProductDataStateMachineEventsRoleDefaultPolicy0FF9ADCF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "states:StartExecution",
              "Effect": "Allow",
              "Resource": {
                "Ref": "SupporterProductDataStateMachineEE9D4865",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SupporterProductDataStateMachineEventsRoleDefaultPolicy0FF9ADCF",
        "Roles": [
          {
            "Ref": "SupporterProductDataStateMachineEventsRole27F9B1A6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SupporterProductDataStateMachineRoleAA234DCC": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SupporterProductDataStateMachineRoleDefaultPolicyD3E01956": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "QueryZuoraLambdaA1DF3AA8",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "QueryZuoraLambdaA1DF3AA8",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "FetchResultsLambda5FC5FE70",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "FetchResultsLambda5FC5FE70",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "AddSupporterRatePlanItemToQueueLambdaDD682096",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "AddSupporterRatePlanItemToQueueLambdaDD682096",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SupporterProductDataStateMachineRoleDefaultPolicyD3E01956",
        "Roles": [
          {
            "Ref": "SupporterProductDataStateMachineRoleAA234DCC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`The supporter-product-data-ts stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "AddSupporterRatePlanItemToQueueLambdaDD682096": {
      "DependsOn": [
        "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "SupporterProductDataLambdaRole4E321A2D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "membership-dist",
          "S3Key": "support/PROD/supporter-product-data-ts/supporter-product-data-ts.zip",
        },
        "Environment": {
          "Variables": {
            "STAGE": "PROD",
          },
        },
        "FunctionName": "supporterProductDataTSAddToQueue-PROD",
        "Handler": "addSupporterRatePlanItemToQueueLambda.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "SupporterProductDataLambdaRole4E321A2D",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 600,
      },
      "Type": "AWS::Lambda::Function",
    },
    "FetchResultsLambda5FC5FE70": {
      "DependsOn": [
        "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "SupporterProductDataLambdaRole4E321A2D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "membership-dist",
          "S3Key": "support/PROD/supporter-product-data-ts/supporter-product-data-ts.zip",
        },
        "Environment": {
          "Variables": {
            "STAGE": "PROD",
          },
        },
        "FunctionName": "supporterProductDataTSFetchResults-PROD",
        "Handler": "fetchResultsLambda.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "SupporterProductDataLambdaRole4E321A2D",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ProcessSupporterRatePlanItemLambdaA5F903FB": {
      "DependsOn": [
        "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "SupporterProductDataLambdaRole4E321A2D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "membership-dist",
          "S3Key": "support/PROD/supporter-product-data-ts/supporter-product-data-ts.zip",
        },
        "Environment": {
          "Variables": {
            "STAGE": "PROD",
          },
        },
        "FunctionName": "supporterProductDataTSProcessItem-PROD",
        "Handler": "processSupporterRatePlanItemLambda.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "SupporterProductDataLambdaRole4E321A2D",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 600,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ProcessSupporterRatePlanItemLambdaSqsEventSourcesupporterproductdatatsPRODSupporterProductDataQueue2A4389871BC9D32A": {
      "Properties": {
        "BatchSize": 10,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "SupporterProductDataQueue672ACC7A",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "ProcessSupporterRatePlanItemLambdaA5F903FB",
        },
        "ScalingConfig": {
          "MaximumConcurrency": 50,
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "QueryZuoraLambdaA1DF3AA8": {
      "DependsOn": [
        "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "SupporterProductDataLambdaRole4E321A2D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "membership-dist",
          "S3Key": "support/PROD/supporter-product-data-ts/supporter-product-data-ts.zip",
        },
        "Environment": {
          "Variables": {
            "STAGE": "PROD",
          },
        },
        "FunctionName": "supporterProductDataTSQueryZuora-PROD",
        "Handler": "queryZuoraLambda.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "SupporterProductDataLambdaRole4E321A2D",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "SupporterProductDataLambdaRole4E321A2D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "ssm:GetParametersByPath",
                    "ssm:GetParameter",
                    "ssm:PutParameter",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:ssm:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":parameter/supporter-product-data/PROD/*",
                      ],
                    ],
                  },
                },
                {
                  "Action": [
                    "s3:PutObject",
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": "arn:aws:s3:::supporter-product-data-export-prod/*",
                },
                {
                  "Action": [
                    "dynamodb:UpdateItem",
                    "dynamodb:PutItem",
                    "dynamodb:GetItem",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:dynamodb:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":table/SupporterProductData-PROD",
                      ],
                    ],
                  },
                },
                {
                  "Action": "cloudwatch:PutMetricData",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": "secretsmanager:GetSecretValue",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:secretsmanager:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":secret:PROD/Zuora-OAuth/SupportServiceLambdas*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "LambdaPermissions",
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SupporterProductDataLambdaRoleDefaultPolicy4120CE52": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "SupporterProductDataQueue672ACC7A",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "SupporterProductDataQueue672ACC7A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SupporterProductDataLambdaRoleDefaultPolicy4120CE52",
        "Roles": [
          {
            "Ref": "SupporterProductDataLambdaRole4E321A2D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SupporterProductDataQueue672ACC7A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "supporter-product-data-ts-PROD",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VisibilityTimeout": 600,
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "SupporterProductDataSchedule71480586": {
      "Properties": {
        "ScheduleExpression": "cron(*/5 * ? * * *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Ref": "SupporterProductDataStateMachineEE9D4865",
            },
            "Id": "Target0",
            "Input": "{"queryType":"incremental"}",
            "RoleArn": {
              "Fn::GetAtt": [
                "SupporterProductDataStateMachineEventsRole27F9B1A6",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "SupporterProductDataStateMachineEE9D4865": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "SupporterProductDataStateMachineRoleDefaultPolicyD3E01956",
        "SupporterProductDataStateMachineRoleAA234DCC",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"QueryZuoraTask","States":{"QueryZuoraTask":{"Next":"WaitForZuora","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"",
              {
                "Fn::GetAtt": [
                  "QueryZuoraLambdaA1DF3AA8",
                  "Arn",
                ],
              },
              ""},"WaitForZuora":{"Type":"Wait","Seconds":30,"Next":"FetchResultsTask"},"FetchResultsTask":{"Next":"CheckForNewSubscriptions","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2},{"ErrorEquals":["States.ALL"],"IntervalSeconds":60,"MaxAttempts":20,"BackoffRate":1}],"Type":"Task","Resource":"",
              {
                "Fn::GetAtt": [
                  "FetchResultsLambda5FC5FE70",
                  "Arn",
                ],
              },
              ""},"CheckForNewSubscriptions":{"Type":"Choice","Choices":[{"Variable":"$.recordCount","NumericEquals":0,"Next":"NoNewSubscriptions"}],"Default":"AddToQueueTask"},"AddToQueueTask":{"Next":"MoreToProcess","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"",
              {
                "Fn::GetAtt": [
                  "AddSupporterRatePlanItemToQueueLambdaDD682096",
                  "Arn",
                ],
              },
              ""},"MoreToProcess":{"Type":"Choice","Choices":[{"Variable":"$.processedCount","NumericLessThanPath":"$.recordCount","Next":"AddToQueueAgainTask"}],"Default":"Done"},"AddToQueueAgainTask":{"Next":"MoreToProcess","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","Resource":"",
              {
                "Fn::GetAtt": [
                  "AddSupporterRatePlanItemToQueueLambdaDD682096",
                  "Arn",
                ],
              },
              ""},"Done":{"Type":"Succeed"},"NoNewSubscriptions":{"Type":"Succeed"}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "SupporterProductDataStateMachineRoleAA234DCC",
            "Arn",
          ],
        },
        "StateMachineName": "supporter-product-data-ts-PROD",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "SupporterProductDataStateMachineEventsRole27F9B1A6": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SupporterProductDataStateMachineEventsRoleDefaultPolicy0FF9ADCF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "states:StartExecution",
              "Effect": "Allow",
              "Resource": {
                "Ref": "SupporterProductDataStateMachineEE9D4865",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SupporterProductDataStateMachineEventsRoleDefaultPolicy0FF9ADCF",
        "Roles": [
          {
            "Ref": "SupporterProductDataStateMachineEventsRole27F9B1A6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SupporterProductDataStateMachineRoleAA234DCC": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SupporterProductDataStateMachineRoleDefaultPolicyD3E01956": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "QueryZuoraLambdaA1DF3AA8",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "QueryZuoraLambdaA1DF3AA8",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "FetchResultsLambda5FC5FE70",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "FetchResultsLambda5FC5FE70",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "AddSupporterRatePlanItemToQueueLambdaDD682096",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "AddSupporterRatePlanItemToQueueLambdaDD682096",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SupporterProductDataStateMachineRoleDefaultPolicyD3E01956",
        "Roles": [
          {
            "Ref": "SupporterProductDataStateMachineRoleAA234DCC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
